--- a/css/style.css
+++ b/css/style.css
@@ -322,8 +322,8 @@ body {
   
   .wrapper2 p {
       color: #000000;
-      margin-left: 45%;
-      margin-top: 20%;
+      margin-top: 45px;
+      margin-left: 47%;
       font-size: large;
   }
 
